[E2E] Fix Testcontainers to enable JFR 8.